# couscous-Crawler

./: .gitignore  Cargo.toml  LICENSE  README.md  emails.db  flowchart.mmd
face-detection/: face_detect.py  face_detector.py  requirements.txt
src/: cli.rs  crawler.rs  database.rs  extractor.rs  image_processor.rs  main.rs
